# LoRaNodeGarage

./: .clang-format  .cmake-format.yaml  .cproject  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  AirTime.cpp  AirTime.h  BaseComponent.h  BinarySensor.cpp  BinarySensor.h  CMakeLists.txt  CODE_ANALYSIS.md  Component.h  ConfigItem.h  Cover.cpp  Cover.h  DistanceSensor.cpp  DistanceSensor.h  EeAdressMap.h  GarageCover.cpp  GarageCover.h  GenericEEPROM.cpp  GenericEEPROM.h  GenericRingBuffer.h  HeightSensor.cpp  HeightSensor.h  HumiditySensor.cpp  HumiditySensor.h  LoRaHandler.cpp  LoRaHandler.h  LoRaNodeGarage.ino  Node.cpp  Node.h  PresenceBinarySensor.cpp  PresenceBinarySensor.h  README.md  RingBuffer.h  Sensor.h  (+9 more)
.github/workflows/: pre-commit.yml
cmake/: CodeCoverage.cmake
components/: BinarySensor.cpp  BinarySensor.h  Component.h  ConfigItem.h  Cover.cpp  Cover.h  Sensor.h  Unit.h
extras/tests/: BaseComponent_test.cpp  BinarySensor_test.cpp  CMakeLists.txt  ConfigItem_test.cpp  Cover_test.cpp  DistanceSensor_test.cpp  GarageCover_test.cpp  GenericRingBuffer_test.cpp  HeightSensor_test.cpp  LoRaHandler_test.cpp  PresenceBinarySensor_test.cpp  Sensor_test.cpp  Unit_test.cpp  Util_test.cpp
extras/tests/mocks/: DHT.h
include/: AHT20.h  AHTReader.h  AirTime.h  BaseComponent.h  BinarySensor.h  Component.h  ConfigItem.h  Cover.h  DHTReader.h  Device.h  DistanceSensor.h  Ee.h  EeAdressMap.h  GarageCover.h  HeightSensor.h  HumiditySensor.h  LoRaHandler.h  Node.h  Number.h  PersistentNumber.h  PersistentNumberComponent.h  PresenceBinarySensor.h  RingBuffer.h  Sensor.h  TemperatureSensor.h  Types.h  Util.h  ValueItem.h
libraries/: Arduino.cpp  Arduino.h  CMakeLists.txt
src/: AHT20.cpp  AHTReader.cpp  AirTime.cpp  BinarySensor.cpp  Cover.cpp  DHTReader.cpp  Device.cpp  DistanceSensor.cpp  GarageCover.cpp  HeightSensor.cpp  HumiditySensor.cpp  LoRaHandler.cpp  PresenceBinarySensor.cpp  TemperatureSensor.cpp  Util.cpp  main.cpp
test/: BaseComponent_test.cpp  BinarySensor_test.cpp  CMakeLists.txt  DistanceSensor_test.cpp  GarageCover_test.cpp  HeightSensor_test.cpp  HumiditySensor_test.cpp  LoRaHandler_test.cpp  Node_test.cpp  Sensor_test.cpp  Types_test.cpp  Unit_test.cpp  Util_test.cpp  bootstrap.cpp
test/mocks/: BufferSerial.cpp
test/mocks/include/: Arduino.h  BufferSerial.h  Cipher.h  HardwareSerial.h  LoRa.h  NewPing.h  WString.h  binary.h
test/mocks/include/avr/: pgmspace.h
test/mocks/src/: EEPROM.cpp  Print.cpp  Stream.cpp
test/test_AirTime/: AirTime_test.cpp
test/test_BaseComponent/: BaseComponent_test.cpp
test/test_BinarySensor/: BinarySensor_test.cpp
test/test_ConfigItem/: ConfigItem_test.cpp
test/test_Cover/: Cover_test.cpp
test/test_Device/: Device_test.cpp
test/test_DistanceSensor/: DistanceSensor_test.cpp
test/test_GarageCover/: GarageCover_test.cpp
test/test_HeightSensor/: HeightSensor_test.cpp
test/test_HumiditySensor/: HumiditySensor_test.cpp
test/test_LoRaHandler/: LoRaHandler_test.cpp
test/test_Node/: Node_test.cpp
test/test_PersistentNumber/: PersistentNumber_test.cpp
test/test_PresenceBinarySensor/: PresenceBinarySensor_test.cpp
test/test_Sensor/: Sensor_test.cpp
test/test_TemperatureSensor/: TemperatureSensor_test.cpp
test/test_Types/: Types_test.cpp
test/test_Unit/: Unit_test.cpp
test/test_Util/: Util_test.cpp
test/test_ValueItem/: ValueItem_test.cpp
tests/: AirTime_test.cpp  BaseComponent_test.cpp  BinarySensor_test.cpp  CMakeLists.txt  Component_test.cpp  ConfigItem_test.cpp  Cover_test.cpp  DistanceSensor_test.cpp  GarageCover_test.cpp  HeightSensor_test.cpp  HumiditySensor_test.cpp  LoRaHandler_test.cpp  Node_test.cpp  PresenceBinarySensor_test.cpp  RingBuffer_test.cpp  Sensor_test.cpp  Sensor_test.h  TemperatureSensor_test.cpp  Types_test.cpp  Unit_test.cpp  Util_test.cpp  ValueItem_test.cpp
tests/mocks/: Arduino.cpp  Arduino.h  BufferSerial.cpp  DHT.h  DistanceSensor.h  EEPROM.h  HeightSensor.h  LoRa.h  NewPing.h  Print.h  Printable.h  Sensor.h  Serial.h  Stream.h
